# types-scipy-sparse

./: DEVELOPMENT.md  LICENSE.md  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements_tox.in  ruff.toml  tox.ini
.github/: CODEOWNERS
.github/workflows/: main.yml
src/scipy-stubs/sparse/: __init__.pyi
tools/make-scipy-sparse-stubs/src/make_scipy_sparse_stubs/: __main__.py
tools/make-scipy-sparse-stubs/src/make_scipy_sparse_stubs/annotation_snippets/class_commons/: coo_base_commons.txt  cs_matrix_init.txt  lil_base_commons.txt
